# NEXUS_BASE_V.1

./: .gitignore  .mcp.json  CAPSTONE_PAPER.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO_WALKTHROUGH.md  FACULTY_MESSAGE.md  GITHUB_PROJECT_ROADMAP.md  LICENSE  LINKEDIN_POST.md  NEXUS_BASE_V1_DEEP_DIVE.md  NOTICE  PIECES_MCP_CLAUDE_CODE_SETUP.md  PUBLICATION_CHECKLIST.md  README.md  README_STRUCTURE.txt  SECURITY.md  SYSTEM_DEMONSTRATION.md  bootstrap_runtime.py  bootstrap_runtime.py.bak_20260501_003803  fix_war_test_warnings.py  nexus_capstone_package_builder.py  nexus_phase_bcd_bootstrap.py  nexus_phase_bcd_bootstrap.py.bak_20260501_003803  nexus_security_wave1_bootstrap.py  nexus_security_wave2_bootstrap.py  nexus_security_wave2_bootstrap.py.bak_20260501_003803  nexus_security_wave3_bootstrap.py  nexus_security_wave3_bootstrap.py.bak_20260501_003803  nexus_sync_bridge.py  nexus_war_test.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
00_governance_ref/: execution_contract.md  generator_registry.md
01_core/: _polished_reference.py
02_config/: action_schema.json  execution_trust_registry.json  security_log_schema.json
03_system_state/: context_export_status.md  post_cleanup_validation_2026-05-01.md
06_operator/: cleanup_inventory_2026-05-01.md
08_reference_material/: SKILLUP_NEXUS_INTEGRATION_MAP.md
08_security_index/: SECURITY_SYSTEM_MAP.md
09_presentation/: DIRECTOR_NOTES.md  DOCUMENTARY_SCRIPT.md  README.md  council_review_demo.html  index.html  war_test_replay.html
(+234 files in other folders)
